tests/paczka1/fuzzy1/63071329.err
Error in line 10: VCxrm A291 53,0
Error in line 13: Fn%abYlBEuX A291 59,1
Error in line 14: VCxrm S49 26,92
Error in line 12: UUT19MntGnj A291 25,4
Error in line 4: Fn4abYlBEuX A291 16,5
Error in line 11: VCxrm S49 5,3
Error in line 27: VCxrm A139 60,8
Error in line 28: VCxrm A291 65,4
Error in line 2: feX0 S49 74,5
Error in line 23: zFcX8RNm A291 26,6
